--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,7 +100,8 @@ jobs:
           generate_release_notes: true
           body: |
             🚀 **Automated Release**
-            - **Coverage:** ${{ needs.test.outputs.coverage }}%
+            - **Coverage:** ${{ env.coverage }}%
             - **Triggered by:** ${{ github.actor }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          coverage: ${{ needs.test.outputs.coverage }}  # Pass coverage from the `test` job as an env variable
