--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,21 +26,21 @@ jobs:
         with:
           go-version-file: 'go.mod'
 
-      - name: Run Test
+      - name: Run Tests
         id: coverage
         run: |
           # Run tests and generate the coverage profile
           go test -v ./... -covermode=count -coverprofile=coverage.out
-          
+
           # Extract the coverage percentage and clean it up (removes the '%' sign)
           COVERAGE=$(go tool cover -func=coverage.out | grep total | awk '{print $3}' | sed 's/%//')
 
           # Debug the extracted coverage value
           echo "Coverage: $COVERAGE%"
-          
+
           # Set coverage as an environment variable for the next job
-          echo "coverage=$COVERAGE" >> $GITHUB_ENV  # Set coverage as an environment variable
-          echo "coverage=$COVERAGE" >> $GITHUB_OUTPUT  # Pass coverage to outputs
+          echo "coverage=$COVERAGE" >> $GITHUB_ENV
+          echo "coverage=$COVERAGE" >> $GITHUB_OUTPUT
 
           # Fail the build if coverage is below 80%
           if (( $(echo "$COVERAGE < 80" | bc -l) )); then
@@ -53,13 +53,13 @@ jobs:
         with:
           filename: coverage.out
 
-      - name: Verify Changed files
+      - name: Verify Changed Files
         uses: tj-actions/verify-changed-files@v16
         id: verify-changed-files
         with:
           files: README.md
 
-      - name: Commit changes
+      - name: Commit Changes
         if: steps.verify-changed-files.outputs.files_changed == 'true'
         run: |
           git config --local user.email "action@github.com"
@@ -67,7 +67,7 @@ jobs:
           git add README.md
           git commit -m "chore: Updated coverage badge."
 
-      - name: Push changes
+      - name: Push Changes
         if: steps.verify-changed-files.outputs.files_changed == 'true'
         uses: ad-m/github-push-action@master
         with:
@@ -86,10 +86,10 @@ jobs:
         with:
           fetch-depth: 0  # Required to fetch tags
 
-      - name: Fetch all tags
+      - name: Fetch All Tags
         run: git fetch --tags
 
-      - name: Determine latest tag and bump version
+      - name: Determine Latest Tag and Bump Version
         id: version
         run: |
           latest_tag=$(git describe --tags --abbrev=0 || echo "v0.0.0")
@@ -109,7 +109,7 @@ jobs:
           body: |
             🚀 **Automated Release**
             - **Coverage:** ${{ env.coverage }}%  # Pass coverage as an environment variable from the 'test' job
-            - **Triggered by:** ${{ github.actor }}
+            - **Triggered by:** [@${{ github.actor }}](https://github.com/${{ github.actor }})
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           coverage: ${{ needs.test.outputs.coverage }}  # Pass coverage from the `test` job as an env variable
