use coverage from outputs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,8 +101,7 @@ jobs:
           generate_release_notes: true
           body: |
             🚀 **Automated Release**
-            - **Coverage:** ${{ env.coverage }}%
+            - **Coverage:** ${{ needs.test.outputs.coverage }}%
             - **Triggered by:** [@${{ github.actor }}](https://github.com/${{ github.actor }})
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          coverage: ${{ env.coverage }}
