--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,22 @@ jobs:
           latest_tag=$(git describe --tags --abbrev=0 || echo "v0.0.0")
           echo "Latest tag: $latest_tag"
           IFS='.' read -r major minor patch <<<"${latest_tag#v}"
-          new_tag="v$major.$minor.$((patch + 1))"
+
+          # Handle rollover logic
+          if [ "$patch" -lt 9 ]; then
+            patch=$((patch + 1))
+          else
+            patch=0
+            if [ "$minor" -lt 9 ]; then
+              minor=$((minor + 1))
+            else
+              minor=0
+              major=$((major + 1))
+            fi
+          fi
+
+          new_tag="v${major}.${minor}.${patch}"
+          echo "New tag: $new_tag"
           git tag "$new_tag"
           git push origin "$new_tag"
           echo "tag=$new_tag" >> $GITHUB_OUTPUT
